--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "emilitar-web",
   "version": "0.1.0",
-  "homepage": "github-page/",
+  "homepage": "https://fernandogatto.github.io/emilitar-web",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -31,7 +31,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
